# jasmin-notifications

./: MANIFEST.in  README.md  pyproject.toml  setup.py
jasmin_notifications/: __init__.py  admin.py  apps.py  helpers.py  models.py  signals.py  urls.py  views.py
jasmin_notifications/management/commands/: clearjasminnotifications.py  clearnotifications.py
jasmin_notifications/migrations/: 0001_initial.py  0001_squashed_0004_alter_notificationtype_level.py  0002_auto_20210401_0909.py  0002_auto_20210421_1522.py  0002_auto_20210524_1418.py  0003_auto_20220207_1359.py  0004_alter_notificationtype_level.py
jasmin_notifications/static/jasmin_notifications/css/: notifications.css
jasmin_notifications/templates/jasmin_notifications/: notification_dropdown.html
jasmin_notifications/templatetags/: notifications.py
