[tool.poetry]
name = "jasmin-notifications"
version = "1.1.0"
description = "Django app providing flexible notifications, both as email and for rendering on site."
authors = ["Matt Pryor <matt.pryor@stfc.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jasmin_notifications"}]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.2"
django-polymorphic = "*"
django-picklefield = "*"

[tool.black]
line-length = 100
target-version = ['py36','py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
